--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "dj-database-url>=3.0.1",
     "django>=6.0",
     "gunicorn>=23.0.0",
+    "psycopg2-binary>=2.9.11",
 ]
