--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,13 @@ dependencies = [
 dev = [
     "ruff>=0.14.10",
 ]
+
+[tool.ruff]
+line-length = 88
+extend-exclude = ["code/build", "build", "dist", ".venv"]
+
+[tool.ruff.lint]
+select = ["E", "F", "W"]
+
+[tool.ruff.lint.per-file-ignores]
+"**/migrations/*.py" = ["E501"]
